--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/nes.css/2.2.1/css/nes.min.css" />
 
-    <title>#vue starters directory - find best bootstrap you #vuejs </title>
+    <title>#vue starters directory - find best scaffold for your #vuejs project</title>
   </head>
   <body>
     <noscript>
